add basic styles

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,26 +6,58 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Main</title>
+    <link rel="stylesheet" href="../static/css/starter-template.css">
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
 </head>
 <body>
+<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Eobaly web scrapper</a>
+    <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search"/>
+    <ul class="navbar-nav px-3">
+        <li class="nav-item text-nowrap">
 <form th:action="@{/logout}" method="post">
-    <input type="submit" value="logout"/>
+    <a href="#" class="nav-link">
+        <!-- <input type="submit" value="logout"/> -->
+        logout
+    </a>
 </form>
+        </li>
+    </ul>
+</nav>
 <h1>Home</h1>
-<p>You are logged in now :)</p>
 
-
+<div class="container-fluid">
+    <div class="row">
+        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+            <div class="sidebar-sticky">
 <div th:if="${productCategories.size() != 0}">
-    <h2>Categories</h2>
-    <ul>
-        <li th:each="category : ${productCategories}">
-            <div th:object="${category}">
-                <p th:text="*{id}"></p>
-                <p th:text="*{name}"></p>
-            </div>
+    <ul class="nav flex-column">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">
+                <span data-feather="shopping-cart"></span>
+                <span>All</span>
+            </a>
+        </li>
+        <li th:each="category : ${productCategories}" class="nav-item">
+            <a th:object="${category}" class="nav-link" href="#">
+                <span data-feather="shopping-cart"></span>
+                <span th:text="*{name}">Name</p>
+            </a>
 
         </li>
     </ul>
 </div>
+            </div>
+        </nav>
+    </div>
+</div>
+
+
+<!-- Icons -->
+<script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+<script>
+    feather.replace()
+</script>
+
 </body>
 </html>
