--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,20 +6,24 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login page</title>
+
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/signin.css">
 </head>
-<body>
-<h1>Login</h1>
+<body class="text-center">
+<p th:if="${loginError}" class="error" th:text="Wrong username or password"></p>
 
-<p th:if="${loginError}" class="error">Wrong username or password</p>
+<p th:if="${logout}" th:text="You were logged out"></p>
 
-<p th:if="${logout}">You were logged out</p>
-
-<form th:action="@{/login}" method="post">
-    <label for="username">Username</label>:
-    <input type="text" id="username" name="username" autofocus="autofocus"/> <br/>
-    <label for="password">Password</label>:
-    <input type="password" id="password" name="password"/> <br/>
-    <input type="submit" value="Log in">
+<form class="form-signin" th:action="@{/login}" method="post">
+    <img src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" class="mb-4" width="72" height="72">
+    <h1 class="h3 mb-3 font-weight-normal">Login</h1>
+    <label for="username" class="sr-only">Username:</label>
+    <input type="text" class="form-control" placeholder="Username" id="username" name="username" autofocus="autofocus"
+           required/>
+    <label for="password" class="sr-only">Password:</label>
+    <input type="password" class="form-control" placeholder="Password" id="password" name="password" required/>
+    <input class="btn btn-lg btn-primary btn-block" type="submit" value="Log in">
 </form>
 </body>
 </html>
