--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/home">Eobaly web scrapper</a>
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">Eobaly web scrapper</a>
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search"/>
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
@@ -44,6 +44,12 @@
                                 <span th:text="*{name}">Name</p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a th:href="@{/error-log}" class="nav-link" href="#">
+                                <span data-feather="shopping-cart"></span>
+                                <span>Error log</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -52,6 +58,8 @@
             <div>
                 <div th:each="product : ${products}">
                     <div th:object="${product}">
+                        <img th:src="*{imgUrl}"
+                             src="https://www.eobaly.cz/pool/vzor/products/clim_thumb_xxl_103841_1.jpg"/>
                         <a th:href="@{/product/{name}(name=*{internalName})}" th:text="*{externalName}"></a>
                     </div>
                 </div>
