--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="../static/css/starter-template.css" th:href="@{/css/starter-template.css}">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
     <script th:src="@{/js/utils.js}" src="../static/css/utils.js"></script>
+
+    <style>
+        .img-limited {
+            max-width: 200px;
+            max-height: 200px;
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
@@ -55,10 +62,11 @@
             </div>
         </nav>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <div>
+            <div class="container">
                 <div th:each="product : ${products}">
                     <div th:object="${product}">
-                        <img th:src="*{imgUrl}"
+                        <img class="img-responsive img-thumbnail img-limited"
+                             th:src="'https://www.eobaly.cz/'+ *{imgUrl}"
                              src="https://www.eobaly.cz/pool/vzor/products/clim_thumb_xxl_103841_1.jpg"/>
                         <a th:href="@{/product/{name}(name=*{internalName})}" th:text="*{externalName}"></a>
                     </div>
