--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="../static/css/starter-template.css" th:href="@{/css/starter-template.css}">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+
+    <style>
+        .img-limited {
+            max-width: 400px;
+            max-height: 400px;
+        }
+    </style>
+
 </head>
 <body th:object="${product}">
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
@@ -35,34 +44,51 @@
             </div>
         </nav>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <div>
-                <h1 th:text="*{externalName}">External name</h1>
-                <h3>Price chart</h3>
-                <div id="chart"></div>
+            <div class="container">
+                <div id="main-content">
+                    <h1 th:text="*{externalName}">External name</h1>
+                    <img class="img-responsive img-limited" th:src="'https://www.eobaly.cz/'+ *{imgUrl}"
+                         src="https://www.eobaly.cz/pool/vzor/products/clim_thumb_xxl_103841_1.jpg"/>
+                    <h3>Price chart</h3>
+                    <div id="chart"></div>
+                </div>
             </div>
         </main>
     </div>
 </div>
 
 <script>
-    let internalName = "[[${product.internalName}]]";
-    let url = "http://" + window.location.host + "/product-price/" + internalName;
+    const internalName = "[[${product.internalName}]]";
+    const url = `http://${window.location.host}/product-price/${internalName}`;
     console.log(`loading from ${url}`);
-    fetch(url).then(
-        function (response) {
-            console.log(response);
-            return response.json();
+    fetch(url,
+        {
+            method: 'GET',
+            credentials: 'include'
         }
-    ).then(function (data) {
-        let trace = {
-            x: [1, 2, 3, 4],
-            y: [10, 15, 13, 17],
-            type: 'scatter'
-        };
-        let data = [trace];
-        Plotly.newPlot('chart', data);
-        console.log('chard loaded...')
-    });
+    ).then(
+        response => response.json()
+    ).then(
+        response => {
+            console.log(response);
+            const trace = {
+                x: response.details.map(it => it.timestamp),
+                y: response.details.map(it => it.prize),
+                type: 'scatter'
+            };
+            const data = [trace];
+            Plotly.newPlot('chart', data);
+            console.log('chard loaded...');
+
+            const average = arr => arr.reduce((p, c) => p + c, 0) / arr.length;
+            const averagePrice = average(response.details.map(it => it.prize));
+
+            document.getElementById('main-content')
+                .appendChild(document.createTextNode(
+                    `The average price over all is ${averagePrice}`
+                ));
+        }
+    );
 </script>
 
 </body>
