--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,8 +8,6 @@
     <title>Main</title>
     <link rel="stylesheet" href="../static/css/starter-template.css" th:href="@{/css/starter-template.css}">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-    <script th:src="@{/js/utils.js}" src="../static/css/utils.js"></script>
-
     <style>
         .img-limited {
             max-width: 200px;
@@ -20,7 +18,8 @@
 <body>
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">Eobaly web scrapper</a>
-    <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search"/>
+    <input id="search-input" class="form-control form-control-dark w-100" type="text" placeholder="Search"
+           aria-label="Search"/>
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
             <form th:action="@{/logout}" method="post">
@@ -84,5 +83,6 @@
 <script>
     feather.replace();
 </script>
+<script th:src="@{/js/home.js}" src="/static/js/home.js"></script>
 </body>
 </html>
