--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -77,36 +77,39 @@
 
     <div id="content">
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
+            <div class="container">
+                <div class="row">
 
-                <div class="navbar-header">
-                    <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
-                        <i class="glyphicon glyphicon-align-left"></i>
-                        <span>Toggle Sidebar</span>
-                    </button>
-                </div>
+                    <div class="navbar-header">
+                        <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
+                            <i class="glyphicon glyphicon-align-left"></i>
+                            <span>Toggle Sidebar</span>
+                        </button>
+                    </div>
 
 
-                <ul class="navbar-header">
-                    <input id="search-input" class="form-control form-control-dark w-100" type="text"
-                           placeholder="Search"
-                           aria-label="Search"
-                           onkeyup="if(event.keyCode == 13) find()"
-                    />
-                </ul>
-
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="#" onclick="document.getElementById('logout-form').submit()">Logout</a>
-                            <form th:action="@{/logout}" method="post" id="logout-form">
-                                <div class="nav-link">
-                                    <input type="hidden" value="logout"/>
-                                </div>
-                            </form>
-                        </li>
+                    <ul class="navbar-header">
+                        <input id="search-input" style="margin-top: 6px; margin-left: 100px;"
+                               class="block-center form-control form-control-dark w-100" type="text"
+                               placeholder="Search"
+                               aria-label="Search"
+                               onkeyup="if(event.keyCode == 13) find()"
+                        />
                     </ul>
+
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a href="#" onclick="document.getElementById('logout-form').submit()">Logout</a>
+                                <form th:action="@{/logout}" method="post" id="logout-form">
+                                    <div class="nav-link">
+                                        <input type="hidden" value="logout"/>
+                                    </div>
+                                </form>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
