--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -78,7 +78,7 @@
 
     <div id="content">
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
+            <div class="container">
 
                 <div class="navbar-header">
                     <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
@@ -89,7 +89,8 @@
 
 
                 <ul class="navbar-header">
-                    <input id="search-input" class="form-control form-control-dark w-100" type="text"
+                    <input id="search-input" style="margin-top: 6px; margin-left: 100px;"
+                           class="form-control form-control-dark w-100" type="text"
                            placeholder="Search"
                            aria-label="Search"
                            onkeyup="if(event.keyCode == 13) find()"
