enable starting page scraping from the GUI - now just for the whole web

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -61,6 +61,12 @@
                 </ul>
             </li>
             <li>
+                <a th:href="@{/scraping}" href="#">
+                    <i class="glyphicon glyphicon-home"></i>
+                    <span>Scraping</span>
+                </a>
+            </li>
+            <li>
                 <a th:href="@{/error-log}" href="#">
                     <i class="glyphicon glyphicon-link"></i>
                     <span>Error log</span>
