--- a/src/main/resources/templates/scraping.html
+++ b/src/main/resources/templates/scraping.html
@@ -51,7 +51,7 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li class="active">
                 <a th:href="@{/scraping}" href="#">
                     <i class="glyphicon glyphicon-home"></i>
                     <span>Scraping</span>
@@ -111,30 +111,57 @@
             </div>
         </nav>
 
-        <div>
-            <h2>Error logs</h2>
-            <div class="line"></div>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th scope="col">Url</th>
-                    <th scope="col">Type</th>
-                    <th scope="col">Message</th>
-                    <th scope="col">StackTrace</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="log : ${errorLogs}" scope="row">
-                    <td th:text="${log.url}">url</td>
-                    <td th:text="${log.type}">type</td>
-                    <td th:text="${log.message}">message</td>
-                    <td th:text="${log.stackTrace}">stackTrace</td>
-                </tr>
-                </tbody>
-            </table>
+        <h2>Scraping</h2>
+        <div class="line"></div>
+        <form class="form-inline" action="#" id="parse-product-form">
+            <h3>Parse product</h3>
+            <label class="sr-only" for="productUrl">ProductUrl</label>
+            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="productUrl" placeholder="Product url">
+            <button type="submit" class="btn btn-primary">Parse</button>
+        </form>
+        <div class="line"></div>
+        <form class="form-inline" action="#" id="parse-category-form">
+            <h3>Parse category</h3>
+            <label class="sr-only" for="productCategoryUrl">ProductCategory</label>
+            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="productCategoryUrl"
+                   placeholder="Category url">
+            <button type="submit" class="btn btn-primary">Parse</button>
+        </form>
+        <div class="line"></div>
+        <form class="form-inline" action="#" id="parse-all-form">
+            <button type="submit" class="btn btn-primary">Parse the whole web</button>
+        </form>
+        <div class="line"></div>
+
+
+        <!-- Modal -->
+        <div class="modal fade" id="logs-dialog" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Parsing status</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <table>
+                            <thead>
+                            <th>url</th>
+                            <th>state</th>
+                            </thead>
+                            <tbody id="table-body">
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="line"></div>
     </div>
 </div>
 
@@ -146,5 +173,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
 <script th:src="@{/js/template.js}" src="../static/js/template.js"></script>
 <script th:src="@{/js/common.js}" src="../static/js/common.js"></script>
+<script th:src="@{/js/scraping.js}" src="../static/js/scraping.js"></script>
 </body>
 </html>
